--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -233,13 +233,7 @@
     width: 100vw;
   }
   .login-right.login-info-box {
-    margin: 0;
-    border-radius: 0 0 18px 18px;
-    box-shadow: none;
-    width: 100vw;
-    min-height: 120px;
-    padding: 0 8vw;
-    background-size: 120px, cover;
+    display: none !important;
   }
   .login-info-title {
     font-size: 2.1rem;
